--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 
 <div class="container">
     <div class="col-md-6 col-md-offset-3">
-        @Html.DropDownList("Last Ten Years", (IEnumerable<SelectListItem>)ViewBag.EmployeeNames, "Select A Year")
+        @Html.DropDownList("Employees", (IEnumerable<SelectListItem>)ViewBag.EmployeeNames, "Select A Year")
     </div>
 </div>
 
